uploading main branch files

--- a/src/app/test.css
+++ b/src/app/test.css
@@ -19,6 +19,7 @@ h1 {
 }
 
 /*Sizing*/
+
 .container {
   margin: 0 auto;
 }
@@ -29,10 +30,11 @@ h1 {
 }
 
 .main {
-  background-color: #ffc200;
+    background-color: #ffc200;
 }
 
 /*Header Section*/
+
 .header {
   padding: 30px 0px 40px;
   margin-left: 50px;
@@ -51,6 +53,7 @@ h1 {
 }
 
 /*Jumbotron Section*/
+
 .jumbotron {
   background-color: #fff;
   max-width: 1200px;
@@ -84,15 +87,11 @@ h1 {
 /*Expertise Section*/
 .cards {
   background-color: #ffc200;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  //display: flex;
 }
 
 .col {
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: space-between;
+
 }
 
 #expertise {
