updated index.html content

--- a/src/app/text.html
+++ b/src/app/text.html
@@ -7,7 +7,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <h1>Headlines.</h1>
+      <h1>Welcome to My Portfolio.</h1>
       <ul>
         <li><a href="3">About</a></li>
         <li><a href="#expertise">Our Services</a></li>
@@ -18,19 +18,23 @@
   </div>
   <div class="jumbotron">
     <div class="container">
-      <h2>We <span>collect and curate</span>
-articles, opinions, and images
-from around the world.</h2>
+      <h2>Hello, my name is <span>Yvonne Madera.</span>
+I'm an Angular Developer looking for my next great opportunity.</h2>
     </div>
   </div>
   <div class="banner">
     <div class="container">
-      <h2>The Bottom Line.</h2>
-      <p>We deliver the news that is relevant to you.</p>
+      <h2>Rutherford, NJ.</h2>
+      <!--<p>We deliver the news that is relevant to you.</p>-->
+       <div class="social-links">
+        <a class="social-button" 
+    [href]="linkedinUrl" target="_blank">LinkedIn</a>
+        <a class="social-button" [href]="githubUrl" target="_blank">GitHub</a>
+      </div>
     </div>
   </div>
   <div class="container">
-    <h2 id="expertise">Our Expertise.</h2>
+    <h2 id="expertise">Angular Projects.</h2>
     <div class="main">
       <div class="spacer">
         <div class="cards">
@@ -55,10 +59,10 @@ from around the world.</h2>
     </div>
   </div>
   <div class="footer">
-    <h3>Headlines.</h3>
-    <p>1000 7th Avenue</p>
-    <p>New York, NY</p>
-    <p>(484) 192 - 8372</p>
+    <h3>Yvonne Madera.</h3>
+    <p>Rutherford, NJ</p>
+    <!--<p>New York, NY</p>-->
+    <p>(908) 242 - 7904</p>
   </div>
 </body>
 </html>
