added projects component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@ I'm an Angular Developer looking for my next great opportunity.</h2>
       </div>
     </div>
   </div>
-  <div class="container">
+  <!--<div class="container">
     <h2 id="expertise">Angular Projects.</h2>
     <div class="main">
       <div class="spacer">
@@ -56,7 +56,7 @@ I'm an Angular Developer looking for my next great opportunity.</h2>
         </div>
       </div>
     </div>
-  </div>
+  </div>--
   <div class="footer">
     <h3>Yvonne Madera.</h3>
     <p>Rutherford, NJ</p>
